# VoronoiPebbles

./: README.md  pyproject.toml  requirements.txt
examples/: points.py  voronoi.py
gallery/patterns/: pebble.py  points.py  reflector.py  rounded_pebble.py  shrunk.py  twinkle.py  voronoi.py  voronoi_local.py
gallery/shapes/: CurvyLamp.stl
src/mesh_patterns/: __init__.py  borders.py  boundary_seeds.py  debug_artifacts.py  export.py  gallery_paths.py  local_voronoi.py  pebble_shapes.py  perforate.py  pipeline.py  printability.py  radial_cutters.py  reflector_cutters.py  rounded_pebble.py  sample.py  selector.py  twinkle_cutters.py  voronoi.py
src/procedural_pebbles/: __init__.py  generator.py  geometry.py  polygons.py  svg.py  voronoi.py
src/procedural_pebbles.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
