[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "procedural-pebbles"
version = "0.1.0"
description = "Generate stylized surface patterns and perforation previews on 3D meshes."
authors = [
    {name = "Tony Cowan"}
]

dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "shapely>=2.0",
    "svgwrite>=1.4",
    "trimesh>=4.0",
    "manifold3d>=2.0",
    "rtree>=1.0",
]

requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
